programando la API

--- a/Recursos/Styles/StyleRegistro.css
+++ b/Recursos/Styles/StyleRegistro.css
@@ -118,3 +118,8 @@ footer p {
     line-height: 33px;
     text-align: center;
 }
+#responseMessage {
+    margin-top: 10px;
+    text-align: center;
+    color: #4CAF50;
+}
