--- a/template/crearmascota.html
+++ b/template/crearmascota.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crear Mascota</title>
-    <link rel="stylesheet" href="/Recursos/Styles/styleCrearMasc.css">
+    <link rel="stylesheet" href="/template/Recursos/Styles/styleCrearMasc.css">
 </head>
 <body>
     <header class="header">
         <div class="logo-header">
-            <img src="/Recursos/images/LogoPetCareSinFondo.png" alt="PetCareLogo">
+            <img src="/template/Recursos/images/LogoPetCareSinFondo.png" alt="PetCareLogo">
         </div>
         <button class="settings" id="settingsButton">
-            <img src="/Recursos/images/Configuracion.png" alt="Configuracion">
+            <img src="/template/Recursos/images/Configuracion.png" alt="Configuracion">
         </button>
         <div class="logout-menu" id="logoutMenu">
-            <a href="/index.html" class="logout-option">Cerrar sesión</a>
+            <a href="/template/index.html" class="logout-option">Cerrar sesión</a>
         </div>
     </header>
     <div class="sidebar">
@@ -23,40 +23,40 @@
             <ul>
                 <li class="menu">
                     <a href="" class="menupadre">
-                        <img src="/Recursos/images/GestionMascota.png" alt="Gestión de Mascotas" class="menu-icon">
+                        <img src="/template/Recursos/images/GestionMascota.png" alt="Gestión de Mascotas" class="menu-icon">
                         GESTIÓN DE MASCOTAS
                     </a>
                     <ul class="submenu">
-                        <li><a href="/crearmascota.html">
-                                <img src="/Recursos/images/AñadirMascota.png" alt="Crear Mascota" class="menu-icon">
+                        <li><a href="/template/crearmascota.html">
+                                <img src="/template/Recursos/images/AñadirMascota.png" alt="Crear Mascota" class="menu-icon">
                                 CREAR MASCOTA
                             </a></li>
                         <li><a href="#">
-                                <img src="/Recursos/images/EditarMascota.png" alt="Editar Mascota" class="menu-icon">
+                                <img src="/template/Recursos/images/EditarMascota.png" alt="Editar Mascota" class="menu-icon">
                                 EDITAR MASCOTA
                             </a></li>
                         <li><a href="#">
-                                <img src="/Recursos/images/VerMascotas.png" alt="Ver Mis Mascotas" class="menu-icon">
+                                <img src="/template/Recursos/images/VerMascotas.png" alt="Ver Mis Mascotas" class="menu-icon">
                                 VER MIS MASCOTAS
                             </a></li>
                     </ul>
                 </li>
                 <li class="menu">
                     <a href="#" class="menupadre">
-                        <img src="/Recursos/images/HistorialMed.png" alt="Historial Médico" class="menu-icon">
+                        <img src="/template/Recursos/images/HistorialMed.png" alt="Historial Médico" class="menu-icon">
                         HISTORIAL MEDICO
                     </a>
                     <ul class="submenu">
                         <li><a href="#">
-                                <img src="/Recursos/images/Vacunas.png" alt="Vacunas" class="menu-icon">
+                                <img src="/template/Recursos/images/Vacunas.png" alt="Vacunas" class="menu-icon">
                                 VACUNAS
                             </a></li>
                         <li><a href="#">
-                                <img src="/Recursos/images/Medicamentos.png" alt="Medicamentos" class="menu-icon">
+                                <img src="/template/Recursos/images/Medicamentos.png" alt="Medicamentos" class="menu-icon">
                                 MEDICAMENTOS
                             </a></li>
                         <li><a href="#">
-                                <img src="/Recursos/images/Desparacitar.png" alt="Desparasitaciones" class="menu-icon">
+                                <img src="/template/Recursos/images/Desparacitar.png" alt="Desparasitaciones" class="menu-icon">
                                 DESPARASITACIONES
                             </a></li>
                     </ul>
@@ -94,6 +94,6 @@
     <footer>
         <p>2024 PetCare. Todos los derechos reservados</p>
     </footer>
-    <script src="/js/crearmasc.js"></script>
+    <script src="/template/js/crearmasc.js"></script>
 </body>
 </html>
