--- a/template/paginaprincipal.html
+++ b/template/paginaprincipal.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina Principal</title>
-    <link rel="stylesheet" href="/Recursos/Styles/stylePagPal.css">
+    <link rel="stylesheet" href="/template/Recursos/Styles/stylePagPal.css">
     <!--Traemos la hoja de estilos de bootstrap para el carrusel-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> 
 </head>
 <body>
     <header class="header">
         <div class="logo-header">
-            <img src="/Recursos/images/LogoPetCareSinFondo.png" alt="PetCareLogo">
+            <img src="/template/Recursos/images/LogoPetCareSinFondo.png" alt="PetCareLogo">
         </div>
         <button class="settings" id="settingsButton">
-            <img src="/Recursos/images/Configuracion.png" alt="Configuracion">
+            <img src="/template/Recursos/images/Configuracion.png" alt="Configuracion">
         </button>
         <div class="logout-menu" id="logoutMenu">
-            <a href="/index.html" class="logout-option">Cerrar sesión</a>
+            <a href="/template/index.html" class="logout-option">Cerrar sesión</a>
         </div>
     </header>
     <div class="sidebar">
@@ -25,40 +25,40 @@
             <ul>
                 <li class="menu">
                     <a href="#" class="menupadre">
-                        <img src="/Recursos/images/GestionMascota.png" alt="Gestión de Mascotas" class="menu-icon">
+                        <img src="/template/Recursos/images/GestionMascota.png" alt="Gestión de Mascotas" class="menu-icon">
                         GESTIÓN DE MASCOTAS
                     </a>
                     <ul class="submenu">
-                        <li><a href="crearmascota.html">
-                                <img src="/Recursos/images/AñadirMascota.png" alt="Crear Mascota" class="menu-icon">
+                        <li><a href="/template/crearmascota.html">
+                                <img src="/template/Recursos/images/AñadirMascota.png" alt="Crear Mascota" class="menu-icon">
                                 CREAR MASCOTA
                             </a></li>
                         <li><a href="#">
-                                <img src="/Recursos/images/EditarMascota.png" alt="Editar Mascota" class="menu-icon">
+                                <img src="/template/Recursos/images/EditarMascota.png" alt="Editar Mascota" class="menu-icon">
                                 EDITAR MASCOTA
                             </a></li>
                         <li><a href="#">
-                                <img src="/Recursos/images/VerMascotas.png" alt="Ver Mis Mascotas" class="menu-icon">
+                                <img src="/template/Recursos/images/VerMascotas.png" alt="Ver Mis Mascotas" class="menu-icon">
                                 VER MIS MASCOTAS
                             </a></li>
                     </ul>
                 </li>
                 <li class="menu">
                     <a href="#" class="menupadre">
-                        <img src="/Recursos/images/HistorialMed.png" alt="Historial Médico" class="menu-icon">
+                        <img src="/template/Recursos/images/HistorialMed.png" alt="Historial Médico" class="menu-icon">
                         HISTORIAL MEDICO
                     </a>
                     <ul class="submenu">
                         <li><a href="#">
-                                <img src="/Recursos/images/Vacunas.png" alt="Vacunas" class="menu-icon">
+                                <img src="/template/Recursos/images/Vacunas.png" alt="Vacunas" class="menu-icon">
                                 VACUNAS
                             </a></li>
                         <li><a href="#">
-                                <img src="/Recursos/images/Medicamentos.png" alt="Medicamentos" class="menu-icon">
+                                <img src="/template/Recursos/images/Medicamentos.png" alt="Medicamentos" class="menu-icon">
                                 MEDICAMENTOS
                             </a></li>
                         <li><a href="#">
-                                <img src="/Recursos/images/Desparacitar.png" alt="Desparasitaciones" class="menu-icon">
+                                <img src="/template/Recursos/images/Desparacitar.png" alt="Desparasitaciones" class="menu-icon">
                                 DESPARASITACIONES
                             </a></li>
                     </ul>
@@ -70,10 +70,10 @@
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/Recursos/images/PerroyGato.jpg" alt="Imagen 1">
+                    <img src="/template/Recursos/images/PerroyGato.jpg" alt="Imagen 1">
                 </div>
                 <div class="carousel-item">
-                    <img src="/Recursos/images/perroygato3.jpg" alt="Imagen 2">
+                    <img src="/template/Recursos/images/perroygato3.jpg" alt="Imagen 2">
                 </div>
                 <!-- Agrega más elementos según sea necesario -->
             </div>
@@ -90,7 +90,7 @@
     <footer>
         <p>2024 PetCare. Todos los derechos reservados</p>
     </footer>
-    <script src="/js/pagpal.js"></script>
+    <script src="/template/js/pagpal.js"></script>
     <!--Scripts de Bootstrap para el carrusel-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script><!--Para interactuar con el DOM-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
