Creación de tabla template

--- a/template/index.html
+++ b/template/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PetCare</title>
-    <link rel="stylesheet" href="Recursos/Styles/style.css">
+    <link rel="stylesheet" href="/template/Recursos/Styles/style.css">
 </head>
 <body>
 
     <header>
-        <img src="Recursos/images/LogoPetCareSinFondo.png" alt="Logo" class="logo-pet-care">
+        <img src="/template/Recursos/images/LogoPetCareSinFondo.png" alt="Logo" class="logo-pet-care">
         <div class="buttons">
-            <a href="registro.html" class="btn iniciarsesion" aria-label="Iniciar sesión en PetCare">Registrarme</a>
-            <a href="login.html" class="btn iniciarsesion" aria-label="Iniciar sesión en PetCare">Iniciar Sesión</a>
+            <a href="/template/registro.html" class="btn iniciarsesion" aria-label="Iniciar sesión en PetCare">Registrarme</a>
+            <a href="/template/login.html" class="btn iniciarsesion" aria-label="Iniciar sesión en PetCare">Iniciar Sesión</a>
         </div>
     </header>
 
@@ -24,17 +24,17 @@
                     <p id="textparrafo">Cuida y organiza la salud de tus mejores amigos en un solo lugar. Porque cada mascota merece un cuidado especial, simplifica el control de sus momentos importantes y asegura su bienestar de manera fácil y segura, ¡todo a solo un clic!</p>
                 </div>
                 <div class="image-content">
-                    <img src="Recursos/images/perroygato3.jpg" alt="Perrogato" class="perroygato-3-jpg">
+                    <img src="/template/Recursos/images/perroygato3.jpg" alt="Perrogato" class="perroygato-3-jpg">
                 </div>
             </div>
 
             <div class="features">
                 <article class="feature">
-                    <img src="Recursos/images/HistorialMed.png" alt="Historial Médico" class="icon historial-med">
+                    <img src="/template/Recursos/images/HistorialMed.png" alt="Historial Médico" class="icon historial-med">
                     <p class="feature-text">Historial Médico: Registra vacunas, tratamientos y mucho más para llevar un control completo.</p>
                 </article>
                 <article class="feature">
-                    <img src="Recursos/images/AñadirMascota.png" alt="Añadir Mascota" class="icon anadir-mascota">
+                    <img src="/template/Recursos/images/AñadirMascota.png" alt="Añadir Mascota" class="icon anadir-mascota">
                     <p class="feature-text">Registrar Mascotas: Agrega a tus mascotas y guarda sus datos importantes en un solo lugar.</p>
                 </article>
             </div>
