--- a/template/login.html
+++ b/template/login.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro - PetCare</title>
-    <link rel="stylesheet" href="Recursos/Styles/stylelogin.css">
+    <link rel="stylesheet" href="/template/Recursos/Styles/stylelogin.css">
 </head>
 <body>
     <header>
-        <img src="Recursos/images/LogoPetCareSinFondo.png" alt="Logo" class="logo-pet-care-sin-fondo-png-1">
+        <img src="/template/Recursos/images/LogoPetCareSinFondo.png" alt="Logo" class="logo-pet-care-sin-fondo-png-1">
     </header>
 
     <section class="login">
@@ -28,7 +28,7 @@
         </form>
         <p id="error-message" style="color: red; display: none;"></p>
 
-        <a href="index.html" class="btncancelar">Cancelar</a>
+        <a href="/template/index.html" class="btncancelar">Cancelar</a>
     </section>
 
     <footer>
