--- a/template/registro.html
+++ b/template/registro.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro - PetCare</title>
-    <link rel="stylesheet" href="Recursos/Styles/StyleRegistro.css">
+    <link rel="stylesheet" href="/template/Recursos/Styles/StyleRegistro.css">
 </head>
 <body>
     <header>
-        <img src="Recursos/images/LogoPetCareSinFondo.png" alt="Logo" class="logo-pet-care-sin-fondo-png-1">
+        <img src="/template/Recursos/images/LogoPetCareSinFondo.png" alt="Logo" class="logo-pet-care-sin-fondo-png-1">
     </header>
 
     <section class="registration">
@@ -43,13 +43,13 @@
         </form>
         <div id="responseMessage"></div>
 
-        <a href="index.html" class="btncancelar">Cancelar</a>
+        <a href="/template/index.html" class="btncancelar">Cancelar</a>
     </section>
 
     <footer>
         <p>2024 PetCare. Todos los derechos reservados</p>
     </footer>
 
-    <script src="js/app.js"></script>
+    <script src="/template/js/app.js"></script>
 </body>
 </html>
