Se agrega proceso para el registro de usuarios

--- a/template/registro.html
+++ b/template/registro.html
@@ -50,6 +50,6 @@
         <p>2024 PetCare. Todos los derechos reservados</p>
     </footer>
 
-    <script src="/template/js/app.js"></script>
+    <script src="/template/js/script.js"></script>
 </body>
 </html>
