Se agrega proceso para login

--- a/template/login.html
+++ b/template/login.html
@@ -13,7 +13,7 @@
 
     <section class="login">
         <h2>Iniciar Sesión en PetCare</h2>
-        <form>
+        <form id="loginForm">
             <div class="input-group">
                 <label for="Documento">Número de Documento</label>
                 <input type="text" id="Documento" name="Documento" required>
@@ -35,6 +35,6 @@
         <p>2024 PetCare. Todos los derechos reservados</p>
     </footer>
 
-    <script src="Recursos/Scripts/app.js"></script>
+    <script src="/template/js/login.js"></script>
 </body>
 </html>
