--- a/template/crearmascota.html
+++ b/template/crearmascota.html
@@ -66,7 +66,7 @@
     </div>
     <section class="content">
         <h1>CREAR MASCOTA</h1>
-        <form>
+        <form id="formCrearMascota">
             <div class="input-group">
                 <label for="tipoMascota">Tipo de Mascota</label>
                 <select id="tipoMascota" name="tipoMascota" required></select>
@@ -95,5 +95,7 @@
         <p>2024 PetCare. Todos los derechos reservados</p>
     </footer>
     <script src="/template/js/crearmasc.js"></script>
+    <script src="/template/js/session.js"></script>
+    <script src="/template/js/crearmascota.js"></script>
 </body>
 </html>
