Creación de html consulta mascota

--- a/template/paginaprincipal.html
+++ b/template/paginaprincipal.html
@@ -37,7 +37,7 @@
                                 <img src="/template/Recursos/images/EditarMascota.png" alt="Editar Mascota" class="menu-icon">
                                 EDITAR MASCOTA
                             </a></li>
-                        <li><a href="#">
+                        <li><a href="/template/consultamascota.html">
                                 <img src="/template/Recursos/images/VerMascotas.png" alt="Ver Mis Mascotas" class="menu-icon">
                                 VER MIS MASCOTAS
                             </a></li>
