Creacion de consulta para ver mascotas

--- a/template/crearmascota.html
+++ b/template/crearmascota.html
@@ -74,7 +74,7 @@
 
             <div class="input-group">
                 <label for="nombreMascota">Nombre Mascota</label>
-                <input type="text" id="nombreMascota" name="nombreMascota" required>
+                <input type="text" id="nombreMascota" name="nombreMascota" placeholder="Ingrese el nombre" required>
             </div>  
 
             <div class="input-group">
@@ -96,6 +96,6 @@
     </footer>
     <script src="/template/js/crearmasc.js"></script>
     <script src="/template/js/session.js"></script>
-    <script src="/template/js/crearmascota.js"></script>
+    <script type="module" src="/template/js/init.js"></script>
 </body>
 </html>
