Integración de consultas mascotas y menus

--- a/template/consultamascota.html
+++ b/template/consultamascota.html
@@ -95,7 +95,7 @@
     <footer>
         <p>2024 PetCare. Todos los derechos reservados</p>
     </footer>
-    <script src="/template/js/crearmasc.js"></script>
+    <script src="/template/js/menus.js"></script>
     <script src="/template/js/session.js"></script>
     <script type="module" src="/template/js/init.js"></script>
 </body>
