--- a/template/crearmascota.html
+++ b/template/crearmascota.html
@@ -96,6 +96,6 @@
     </footer>
     <script src="/template/js/menus.js"></script>
     <script src="/template/js/session.js"></script>
-    <script type="module" src="/template/js/init.js"></script>
+    <script type="module" src="/template/js/funcionescrearmasc.js"></script>
 </body>
 </html>
