--- a/template/Recursos/Styles/styleconsultaMasc.css
+++ b/template/Recursos/Styles/styleconsultaMasc.css
@@ -275,17 +275,26 @@ table {
     width: 100%;
     border-collapse: collapse;
 }
-
-th,
-td {
-    padding: 10px;
-    border: 1px solid #ddd;
-    text-align: center;
+th {
     font-weight: bold;
     color: #388E3C;
     font-family: 'Glacial Indifference';
 }
 
+th, td {
+    padding: 10px;
+    border: 1px solid #ddd;
+    text-align: center;
+}
+
 tr:nth-child(even) {
     background-color: #f9f9f9;
+}
+
+tr {
+    padding: 10px;
+    border: 1px solid #ddd;
+    text-align: center;
+    color: black;
+    font-family: 'Glacial Indifference';
 }
