Creacion del modulo de Vacunas

--- a/template/index.html
+++ b/template/index.html
@@ -11,7 +11,7 @@
     <header>
         <img src="/template/Recursos/images/LogoPetCareSinFondo.png" alt="Logo" class="logo-pet-care">
         <div class="buttons">
-            <a href="/template/registro.html" class="btn iniciarsesion" aria-label="Iniciar sesión en PetCare">Registrarme</a>
+            <a href="/template/registro.html" class="btn iniciarsesion" aria-label="Registrarse en PetCare">Registrarme</a>
             <a href="/template/login.html" class="btn iniciarsesion" aria-label="Iniciar sesión en PetCare">Iniciar Sesión</a>
         </div>
     </header>
