--- a/template/editarmascota.html
+++ b/template/editarmascota.html
@@ -47,7 +47,7 @@
                         HISTORIAL MEDICO
                     </a>
                     <ul class="submenu">
-                        <li><a href="#">
+                        <li><a href="/template/vacunas.html">
                                 <img src="/template/Recursos/images/Vacunas.png" alt="Vacunas" class="menu-icon">
                                 VACUNAS
                             </a></li>
