--- a/template/editarmascota.html
+++ b/template/editarmascota.html
@@ -51,7 +51,7 @@
                                 <img src="/template/Recursos/images/Vacunas.png" alt="Vacunas" class="menu-icon">
                                 VACUNAS
                             </a></li>
-                        <li><a href="#">
+                        <li><a href="/template/medicamentos.html">
                                 <img src="/template/Recursos/images/Medicamentos.png" alt="Medicamentos" class="menu-icon">
                                 MEDICAMENTOS
                             </a></li>
