--- a/template/registrarvacuna.html
+++ b/template/registrarvacuna.html
@@ -51,7 +51,7 @@
                                 <img src="/template/Recursos/images/Vacunas.png" alt="Vacunas" class="menu-icon">
                                 VACUNAS
                             </a></li>
-                        <li><a href="#">
+                        <li><a href="/template/medicamentos.html">
                                 <img src="/template/Recursos/images/Medicamentos.png" alt="Medicamentos" class="menu-icon">
                                 MEDICAMENTOS
                             </a></li>
@@ -101,6 +101,6 @@
     </footer>
     <script src="/template/js/menus.js"></script>
     <script src="/template/js/session.js"></script>
-    <script type="module" src="/template/js/funcionescrearvacuna.js"></script>
+    <script type="module" src="/template/js/funcionesmascxtipomasc.js"></script>
 </body>
 </html>
