Adicionando el crear medicamento

--- a/template/medicamentos.html
+++ b/template/medicamentos.html
@@ -66,7 +66,7 @@
     </div>
     <section class="content">
         <h1>MEDICAMENTOS</h1>
-        <form id="formVacuna">
+        <form id="formMedicamento">
             <div class="input-group">
                 <label for="tipoMascota">Tipo de Mascota</label>
                 <select id="tipoMascota" name="tipoMascota" required></select>
@@ -103,6 +103,6 @@
     <script src="/template/js/menus.js"></script>
     <script src="/template/js/session.js"></script>
     <script type="module" src="/template/js/funcionesconsultmasc.js"></script>
-    <script src="/template/js/consultarvacuna.js"></script>
+    <script src="/template/js/consultarmedicamentos.js"></script>
 </body>
 </html>
