--- a/template/registrarmedicamento.html
+++ b/template/registrarmedicamento.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crear Medicamento</title>
-    <link rel="stylesheet" href="/template/Recursos/Styles/styleRegistrarvacuna.css">
+    <link rel="stylesheet" href="/template/Recursos/Styles/styleRegistrarMedicamento.css">
 </head>
 <body>
     <header class="header">
@@ -99,7 +99,7 @@
 
             <div class="input-group">
                 <label for="estado">Estado <br>(Marque si esta activo)</label>
-                <input type="checkbox" id="activo" name="activo">
+                <input type="checkbox" id="estado" name="estado">
             </div>
 
             <button type="submit" class="btncrearMed" aria-label="crearmed">Registrar Medicamento</button>
@@ -111,6 +111,6 @@
     </footer>
     <script src="/template/js/menus.js"></script>
     <script src="/template/js/session.js"></script>
-    <script type="module" src="/template/js/funcionesmascxtipomasc.js"></script>
+    <script type="module" src="/template/js/funcionescrearmedicamento.js"></script>
 </body>
 </html>
