--- a/template/paginaprincipal.html
+++ b/template/paginaprincipal.html
@@ -53,11 +53,11 @@
                                 <img src="/template/Recursos/images/Vacunas.png" alt="Vacunas" class="menu-icon">
                                 VACUNAS
                             </a></li>
-                        <li><a href="#">
+                        <li><a href="/template/medicamentos.html">
                                 <img src="/template/Recursos/images/Medicamentos.png" alt="Medicamentos" class="menu-icon">
                                 MEDICAMENTOS
                             </a></li>
-                        <li><a href="#">
+                        <li><a href="/template/desparasitaciones.html">
                                 <img src="/template/Recursos/images/Desparacitar.png" alt="Desparasitaciones" class="menu-icon">
                                 DESPARASITACIONES
                             </a></li>
