--- a/template/registrardesparacitacion.html
+++ b/template/registrardesparacitacion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crear Mascota</title>
-    <link rel="stylesheet" href="/template/Recursos/Styles/styleEditarMasc.css">
+    <link rel="stylesheet" href="/template/Recursos/Styles/styleregistrardesparacitaciones.css">
 </head>
 <body>
     <header class="header">
@@ -65,40 +65,37 @@
         </nav>
     </div>
     <section class="content">
-        <h1>EDITAR MASCOTA</h1>
-        <form id="formEditarMascota">
+        <h1>REGISTRAR NUEVA DESPARACITACIÓN</h1>
+        <form id="formcreardesparacitacion">
             <div class="input-group">
                 <label for="tipoMascota">Tipo de Mascota</label>
                 <select id="tipoMascota" name="tipoMascota" required></select>
-            </div>            
+            </div>
 
             <div class="input-group">
-                <label for="nombreMascota">Nombre Mascota</label>
-                <input type="text" id="nombreMascota" name="nombreMascota" required>
-            </div>  
+                <label for="Mascota">Mascota</label>
+                <select id="Mascota" name="Mascota" required></select>
+            </div>   
 
-            <button type="submit" class="btneditarMascota" aria-label="EditarMascota">Consultar Mascota</button>
-            <p id="error-message" style="color: red;"></p>
+            <div class="input-group">
+                <label for="nombredesparasitante">Nombre Desparasitante</label>
+                <input type="text" id="nombredesparasitante" name="nombredesparasitante" placeholder="Ingrese el nombre" required>
+            </div>
+
+            <div class="input-group">
+                <label for="fechaAplicacion">Fecha Apliación</label>
+                <input type="date" id="fechaAplicacion" name="fechaAplicacion" required>
+            </div>
+
+            <button type="submit" class="btncrearVacuna" aria-label="CrearVacuna">Registrar Desparacitación</button>
         </form>
-        <table id="tablaConsMascota">
-            <thead>
-              <tr>
-                <th>Acciones</th>
-                <th>Tipo de Mascota</th>
-                <th>Nombre Mascota</th>
-                <th>Raza</th>
-                <th>Fecha de Nacimiento</th>
-              </tr>
-            </thead>
-            <tbody></tbody>
-          </table>          
+        <p id="error-message" style="color: red; display: none;"></p>
     </section>
     <footer>
         <p>2024 PetCare. Todos los derechos reservados</p>
     </footer>
     <script src="/template/js/menus.js"></script>
     <script src="/template/js/session.js"></script>
-    <script type="module" src="/template/js/funcionesconsultmasc.js"></script>
-    <script type="module" src="/template/js/editarmascota.js"></script>
+    <script type="module" src="/template/js/funcionesmascxtipomasc.js"></script>
 </body>
 </html>
