--- a/template/registrarmedicamento.html
+++ b/template/registrarmedicamento.html
@@ -55,7 +55,7 @@
                                 <img src="/template/Recursos/images/Medicamentos.png" alt="Medicamentos" class="menu-icon">
                                 MEDICAMENTOS
                             </a></li>
-                        <li><a href="#">
+                        <li><a href="/template/desparasitaciones.html">
                                 <img src="/template/Recursos/images/Desparacitar.png" alt="Desparasitaciones" class="menu-icon">
                                 DESPARASITACIONES
                             </a></li>
