Creación de consulta de desparacitacion e iingreso

--- a/template/desparasitaciones.html
+++ b/template/desparasitaciones.html
@@ -82,7 +82,7 @@
             </div>
             <p id="error-message" style="color: red;"></p>
         </form>
-            <table id="tablavacuna">
+            <table id="tabladesparacitacion">
                 <thead>
                     <tr>
                         <th>Nombre Desparasitante</th>
@@ -99,6 +99,6 @@
     <script src="/template/js/menus.js"></script>
     <script src="/template/js/session.js"></script>
     <script type="module" src="/template/js/funcionesconsultmasc.js"></script>
-    <script src="/template/js/consultarvacuna.js"></script>
+    <script src="/template/js/consultardesparacitaciones.js"></script>
 </body>
 </html>
