--- a/template/registrardesparacitacion.html
+++ b/template/registrardesparacitacion.html
@@ -83,7 +83,7 @@
             </div>
 
             <div class="input-group">
-                <label for="fechaAplicacion">Fecha Apliación</label>
+                <label for="fechaAplicacion">Fecha Aplicación</label>
                 <input type="date" id="fechaAplicacion" name="fechaAplicacion" required>
             </div>
 
@@ -96,6 +96,6 @@
     </footer>
     <script src="/template/js/menus.js"></script>
     <script src="/template/js/session.js"></script>
-    <script type="module" src="/template/js/funcionesmascxtipomasc.js"></script>
+    <script type="module" src="/template/js/funcioncreardesparacitacion.js"></script>
 </body>
 </html>
